[DONE] RGAA 10.07 (Fix focus visibility) (#940)
* Add outline for buttons

* Improve video cut

* remove Merge artifacts

* Correct a bug on video completion causing `local variable 'list_track' referenced before assignment` exception in some cases

* add the btn-link class to pod-btn-social btns to handle focus related styles
+ correct typos in video encoding msg
 + improve .select2-container--focus css

* Correct Accessibility focus on video_cut & podfile/upload file

* Update lang files

* Push compiled .mo file

---------

--- a/pod/main/static/css/pod.css
+++ b/pod/main/static/css/pod.css
@@ -1648,7 +1648,8 @@ body[data-admin-utc-offset]
   margin-right: 2.7rem;
 }
 
-div.disabled, a.player-element.disabled {
+div.disabled,
+a.player-element.disabled {
   background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.2) 25%, transparent 25%, transparent 50%, rgba(0, 0, 0, 0.2) 50%, rgba(0, 0, 0, 0.2) 75%, transparent 75%, transparent);
   background-size: 4px 4px;
   background-repeat: repeat;
